<resources>
    <string name="app_name">Aunty Shop</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="todayMenu">TODAY\'s MENU</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_acc">Don`t Have Account Yet? <u>Register Now!</u></string>
    <string name="reset_password">Reset Password</string>
    <string name="ace_mail">\@aceplussolutions.com</string>
    <string name="register">REGISTER</string>
    <string name="special_order">Special Order</string>
    <string name="Order">Order</string>
    <string name="History">History</string>
    <string name="user_name">User Name</string>
    <string name="sign_out"><u>Sign Out</u></string>
    <string name="save_changes">Save Changes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="Shops">Shops in MICT Park</string>
</resources>
