<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:orientation="vertical"
    android:layout_gravity="">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/imgV_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_close_black_24dp"
            android:tint="@color/colorWhite" />
    </RelativeLayout>
<LinearLayout
    android:layout_gravity="center"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:text="@string/user_name"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pp_userName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:editable="false"
            android:background="@drawable/edit_text_border_white_full"
            android:paddingLeft="20dp"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:text="Department"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/pp_department"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_border_white_full"
            android:paddingLeft="20dp"
            android:textSize="16sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:text="@string/password"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pp_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_border_white_full"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textSize="16sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_saveChanges"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/sign_in_rectangle"
        android:text="@string/save_changes"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/sign_out"
        android:textColor="@color/colorWhite"
        android:textSize="12dp"
        android:textStyle="bold" />


</LinearLayout>
</LinearLayout>